Modified header, About me and css styles

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -10,7 +10,8 @@ body {
 
 // Custom Button Size
 .btn-xl {
-  padding: 1.25rem 2.5rem;
+  // padding: 1.25rem 2.5rem;
+  padding: 1.1rem 2rem;
 }
 
 // Content Section
