--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Source Sans Pro'; }
 
 .btn-xl {
-  padding: 1.25rem 2.5rem; }
+  padding: 1.1rem 2rem; }
 
 .content-section {
   padding-top: 7.5rem;
@@ -97,7 +97,7 @@ h6 {
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #1D809F;
+  background: #FFC857;
   border-left: 1px solid rgba(255, 255, 255, 0.1); }
 
 .sidebar-nav {
@@ -166,7 +166,7 @@ h6 {
 
 .service-icon {
   background-color: #fff;
-  color: #1D809F;
+  color: #FFC857;
   height: 7rem;
   width: 7rem;
   display: block;
@@ -231,7 +231,7 @@ h6 {
         -webkit-clip-path: inset(2rem);
         clip-path: inset(2rem); }
       .portfolio-item:hover .caption {
-        background-color: rgba(29, 128, 159, 0.9);
+        background-color: rgba(255, 200, 87, 0.9);
         -webkit-clip-path: inset(2rem);
         clip-path: inset(2rem); } }
 
@@ -244,25 +244,25 @@ footer.footer {
     width: 4rem;
     line-height: 4.3rem;
     font-size: 1.5rem;
-    background-color: #1D809F;
+    background-color: #FFC857;
     transition: background-color 0.15s ease-in-out;
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1); }
     footer.footer .social-link:hover {
-      background-color: #155d74;
+      background-color: #ffb724;
       text-decoration: none; }
 
 a {
-  color: #1D809F; }
+  color: #FFC857; }
   a:hover, a:focus, a:active {
-    color: #155d74; }
+    color: #ffb724; }
 
 .btn-primary {
-  background-color: #1D809F !important;
-  border-color: #1D809F !important;
+  background-color: #FFC857 !important;
+  border-color: #FFC857 !important;
   color: #fff !important; }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-    background-color: #155d74 !important;
-    border-color: #155d74 !important; }
+    background-color: #ffb724 !important;
+    border-color: #ffb724 !important; }
 
 .btn-secondary {
   background-color: #ecb807 !important;
@@ -277,13 +277,14 @@ a {
 
 .btn {
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
-  font-weight: 700; }
+  font-weight: 400;
+  font-size: 1.2rem; }
 
 .bg-primary {
-  background-color: #1D809F !important; }
+  background-color: #FFC857 !important; }
 
 .text-primary {
-  color: #1D809F !important; }
+  color: #FFC857 !important; }
 
 .text-secondary {
   color: #ecb807 !important; }
