Initial commit on feature-A

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -20,6 +20,16 @@ body {
   padding-bottom: 7.5rem;
 }
 
+.content-section2 {
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
+  background: url(../images/retro-md.png);
+  background: url(../images/retro-md-2.jpg);
+background-position: bottom right;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
 .content-section-heading {
   h2 {
     font-size: 3rem;
